--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".ScoringActivity" android:label="@string/title_scoring"> </activity>
         <activity android:name=".TeamActivity" android:label="@string/title_team"> </activity>
         <activity android:name=".NewScoringActivity" android:label="@string/newScoring"></activity>
+        <activity android:name=".ScoringOverviewActivity" android:label="@string/scoringRound"></activity>
     </application>
 
 </manifest>
