Can transition between the activities from Creating new scoring round to input scores. Going back not yet implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".TeamActivity" android:label="@string/title_team"> </activity>
         <activity android:name=".NewScoringActivity" android:label="@string/newScoring"></activity>
         <activity android:name=".ScoringOverviewActivity" android:label="@string/scoringRound"></activity>
+        <activity android:name=".InputScoresActivity" android:label="Input Scores"></activity>
     </application>
 
 </manifest>
